@@ -1,3 +1,6 @@
+* Fri Jun 03 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.9.0
+- Update from camptocamp/systemd to puppet/systemd
+
 * Wed Jun 23 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.8.0
 - Updated the README
 
